--- a/csharp/keyboards/keyboards.csproj
+++ b/csharp/keyboards/keyboards.csproj
@@ -6,6 +6,14 @@
         <LangVersion>8</LangVersion>
         <Nullable>enable</Nullable>
         <Authors>withinboredom</Authors>
+        <AssemblyName>keyboard-color</AssemblyName>
+        <PackageId>keyboardcolors</PackageId>
+        <Title>Keyboard Colors</Title>
+        <Company>withinboredom (Rob LanderS)</Company>
+        <Product>keyboard-colors</Product>
+        <AssemblyVersion>1.0</AssemblyVersion>
+        <FileVersion>1.0</FileVersion>
+        <NeutralLanguage>en</NeutralLanguage>
     </PropertyGroup>
 
     <PropertyGroup Condition=" '$(Configuration)' == 'Release' ">
