--- a/csharp/keyboards/keyboards.csproj
+++ b/csharp/keyboards/keyboards.csproj
@@ -2,6 +2,7 @@
 
     <PropertyGroup>
         <OutputType>Exe</OutputType>
+        <Version>1.0.1</Version>
         <TargetFramework>netcoreapp3.0</TargetFramework>
         <LangVersion>8</LangVersion>
         <Nullable>enable</Nullable>
@@ -9,11 +10,16 @@
         <AssemblyName>keyboard-color</AssemblyName>
         <PackageId>keyboardcolors</PackageId>
         <Title>Keyboard Colors</Title>
-        <Company>withinboredom (Rob LanderS)</Company>
+        <Company>withinboredom (Rob Landers)</Company>
         <Product>keyboard-colors</Product>
-        <AssemblyVersion>1.0</AssemblyVersion>
-        <FileVersion>1.0</FileVersion>
+        <AssemblyVersion>1.0.1</AssemblyVersion>
+        <FileVersion>1.0.1</FileVersion>
         <NeutralLanguage>en</NeutralLanguage>
+        <PackageVersion>1.0.1</PackageVersion>
+        <PackageProjectUrl>https://github.com/withinboredom/system-76-keyboards</PackageProjectUrl>
+        <PackageLicenseUrl>https://github.com/withinboredom/system-76-keyboards/blob/master/LICENSE</PackageLicenseUrl>
+        <RepositoryUrl>https://github.com/withinboredom/system-76-keyboards</RepositoryUrl>
+        <RepositoryType>git</RepositoryType>
     </PropertyGroup>
 
     <PropertyGroup Condition=" '$(Configuration)' == 'Release' ">
@@ -30,6 +36,7 @@
 	<PublishTrimmed>true</PublishTrimmed>
 	<PublishReadyToRun>true</PublishReadyToRun>
 	<CrossGenDuringPublish>false</CrossGenDuringPublish>
+	<PublishReadyToRunShowWarnings>true</PublishReadyToRunShowWarnings>
    </PropertyGroup>
 
     <ItemGroup>
