--- a/.github/workflows/dotnetcore.yml
+++ b/.github/workflows/dotnetcore.yml
@@ -13,5 +13,8 @@ jobs:
       uses: actions/setup-dotnet@v1
       with:
         dotnet-version: 3.0.101
+    - working-directory: csharp
     - name: Build with dotnet
       run: dotnet build --configuration Release
+    - name: Run Tests
+      run: dotnet test
