--- a/.github/workflows/dotnetcore.yml
+++ b/.github/workflows/dotnetcore.yml
@@ -13,8 +13,9 @@ jobs:
       uses: actions/setup-dotnet@v1
       with:
         dotnet-version: 3.0.101
-    - working-directory: csharp
     - name: Build with dotnet
+      working-directory: csharp
       run: dotnet build --configuration Release
     - name: Run Tests
+      working-directory: csharp
       run: dotnet test
