--- a/csharp/UnitTests/UnitTests.csproj
+++ b/csharp/UnitTests/UnitTests.csproj
@@ -2,7 +2,7 @@
 
     <PropertyGroup>
         <TargetFramework>netcoreapp3.0</TargetFramework>
-
+	<DebugType>full</DebugType>
         <IsPackable>false</IsPackable>
     </PropertyGroup>
 
