Use github action

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -21,10 +21,9 @@ jobs:
       - name: Stage code coverage
         working-directory: csharp
         run: mv UnitTests/TestResults/*/coverage.opencover.xml .
-      - name: Install 2.1
-        uses: actions/setup-dotnet@v1
-        with:
-          dotnet-version: 2.1.607
       - name: Upload coverage
-        working-directory: csharp
-        run: ~/.dotnet/tools/codecov -f coverage.opencover.xml -t $CODECOV
+        uses: codecov/codecov-action@v1
+        with:
+          token: ${{ secrets.CODECOV }}
+          file: csharp/coverage.opencover.xml
+          name: Coverage
