--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -18,14 +18,14 @@ jobs:
         run: dotnet test --settings coverletArgs.runsettings
       - name: Stage code coverage
         working-directory: csharp
-        run: mv UnitTests/TestResults/*/coverage.opencover.xml .
+        run: mv UnitTests/TestResults/*/coverage.cobertura.xml .
       - name: Save coverage as artifact
         uses: actions/upload-artifact@v1
         with:
           name: coverage-report
-          path: csharp/coverage.opencover.xml
+          path: csharp/coverage.cobertura.xml
       - name: Upload coverage
         uses: codecov/codecov-action@v1
         with:
           token: ${{ secrets.CODECOV }}
-          file: ./csharp/coverage.opencover.xml
+          file: ./csharp/coverage.cobertura.xml
