--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -1,6 +1,6 @@
 name: Builder
 
-on: [push]
+on: [push, pull_request]
 
 jobs:
   tests:
@@ -18,14 +18,14 @@ jobs:
         run: dotnet test --settings coverletArgs.runsettings
       - name: Stage code coverage
         working-directory: csharp
-        run: mv UnitTests/TestResults/*/coverage.cobertura.xml .
+        run: mv UnitTests/TestResults/*/coverage.info .
       - name: Save coverage as artifact
         uses: actions/upload-artifact@v1
         with:
           name: coverage-report
-          path: csharp/coverage.cobertura.xml
+          path: csharp/coverage.info
       - name: Upload coverage
-        uses: codecov/codecov-action@v1
+        uses: coverallsapp/github-action@master
         with:
-          token: ${{ secrets.CODECOV }}
-          file: ./csharp/coverage.cobertura.xml
+          github-token: ${{ secrets.GITHUB_TOKEN }}
+          path-to-lcov: ./csharp/coverage.info
