--- a/csharp/keyboards/keyboards.csproj
+++ b/csharp/keyboards/keyboards.csproj
@@ -24,7 +24,7 @@
 
     <PropertyGroup Condition=" '$(Configuration)' == 'Release' ">
       <DefineConstants />
-      <CheckForOverflowUnderflow>true</CheckForOverflowUnderflow>
+      <CheckForOverflowUnderflow>false</CheckForOverflowUnderflow>
       <PlatformTarget>x64</PlatformTarget>
       <DebugType>none</DebugType>
     </PropertyGroup>
