--- a/csharp/keyboards/keyboards.csproj
+++ b/csharp/keyboards/keyboards.csproj
@@ -41,6 +41,18 @@
 
     <ItemGroup>
       <PackageReference Include="CommandLineParser" Version="2.6.0" />
+      <PackageReference Include="Microsoft.Extensions.Configuration" Version="3.0.1" />
+      <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="3.0.1" />
+      <PackageReference Include="Microsoft.Extensions.Configuration.EnvironmentVariables" Version="3.0.1" />
+      <PackageReference Include="Microsoft.Extensions.Configuration.FileExtensions" Version="3.0.1" />
+      <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="3.0.1" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <None Remove="appsettings.json" />
+      <Content Include="appsettings.json">
+        <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      </Content>
     </ItemGroup>
 
 </Project>
