--- a/csharp/keyboards/settings.json
+++ b/csharp/keyboards/settings.json
@@ -1,30 +1,27 @@
 {
     "Logging": "Debug",
     "Filters": [
-        "WashedOut"
     ],
     "DimOnSleep": true,
-    "Mode": "SolidColor",
+    "Mode": "Monitor",
     "FPS": 10,
     "Options": {
         "SolidColor": {
-            "Colors": {
-                "Left": "#ABABAB",
-                "Center": "#ABABAB",
-                "Right": "#ABABAB"
-            }
+            "LeftOrSingle": "#ABABAB",
+            "Center": "#ABABAB",
+            "Right": "#ABABAB"
         },
         "Rainbow": {
-            "RedPhase": 0.0003,
-            "GreenPhase": 0.001,
-            "BluePhase": 0.0007
+            "RedPhase": 0.3,
+            "GreenPhase": 0.01,
+            "BluePhase": 0.07
         },
         "Monitor": {
             "Cpu": {
                 "Red": 95,
                 "Yellow": 75,
                 "Green": 50,
-                "Position": "Left"
+                "Position": "LeftOrSingle"
             },
             "Memory": {
                 "Red": 80,
