--- a/deb/DEBIAN/control
+++ b/deb/DEBIAN/control
@@ -3,6 +3,7 @@ Version: _version_
 Section: utilities
 Priority: optional
 Architecture: any-amd64
+Depends: libxext6 libx11-6
 Maintainer: Rob Landers 
 Description: Animated colors for System76 machines
  This package allows you to have animated colors on your keyboard.
