--- a/csharp/keyboards/keyboards.csproj
+++ b/csharp/keyboards/keyboards.csproj
@@ -2,7 +2,7 @@
 
     <PropertyGroup>
         <OutputType>Exe</OutputType>
-        <Version>_version_</Version>
+        <Version>1.1.0-beta.5</Version>
         <TargetFramework>netcoreapp3.0</TargetFramework>
         <LangVersion>8</LangVersion>
         <Nullable>enable</Nullable>
