--- a/debian/control
+++ b/debian/control
@@ -1,11 +1,11 @@
-Source: s76-keyboard-colors  
+Source: s76-keyboard-colors
 Maintainer: Rob Landers <landers.robert@gmail.com>
 Build-Depends: debhelper (>= 8.0.0)
-Standards-Version: 3.9.3
+Standards-Version: 4.4.1.1
 Section: utils
 
 Package: s76-keyboard-colors
-Priority: extra  
+Priority: optional  
 Architecture: any-amd64
 Depends: ${shlibs:Depends}, ${misc:Depends}  
 Description: Beautiful colors for system76 keyboards
