Stop fucking with my executable dammit

--- a/debian/control
+++ b/debian/control
@@ -1,6 +1,6 @@
 Source: s76-keyboard-colors
 Maintainer: Robert Landers <landers.robert@gmail.com>
-Build-Depends: debhelper (>= 9), dh-systemd
+Build-Depends: debhelper (>= 10), dh-systemd
 Standards-Version: 4.1.4
 Vcs-git: git://github.com:withinboredom/system-76-keyboards.git
 Section: utils
@@ -8,6 +8,6 @@ Section: utils
 Package: s76-keyboard-colors
 Priority: optional  
 Architecture: any-amd64
-Depends: ${shlibs:Depends}, ${misc:Depends}  
+Depends: ${shlibs:Depends}, ${misc:Depends}, libx11-6  
 Description: Beautiful colors for system76 keyboards
  Makes the world a better place
