--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -35,3 +35,20 @@ jobs:
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
           path-to-lcov: ./csharp/coverage.info
+  deb:
+    
+    runs-on: ubuntu-latest
+    
+    steps:
+      - uses: actions/checkout@v1
+      - name: Setup .NET Core
+        uses: actions/setup-dotnet@v1
+        with:
+          dotnet-version: 3.0.101
+      - name: Build Unsigned Deb
+        run: make package.deb
+      - name: Save deb as artifact
+        uses: actions/upload-artifact@v1
+        with:
+          name: package.deb
+          path: package.deb
