--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -46,9 +46,9 @@ jobs:
         with:
           dotnet-version: 3.0.101
       - name: apt update
-        run: apt-get update
+        run: sudo apt-get update
       - name: install deps
-        run: apt-get install -y build-essentials gnupg pbuilder ubuntu-dev-tools apt-file dh-make bzr-builddeb
+        run: sudo apt-get install -y build-essentials gnupg pbuilder ubuntu-dev-tools apt-file dh-make bzr-builddeb
       - name: Build Unsigned Deb
         run: make package.deb
       - name: Save deb as artifact
