--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -48,7 +48,7 @@ jobs:
       - name: apt update
         run: sudo apt-get update
       - name: install deps
-        run: sudo apt-get install -y build-essentials gnupg pbuilder ubuntu-dev-tools apt-file dh-make bzr-builddeb
+        run: sudo apt-get install -y build-essential devscripts lintian
       - name: Build Unsigned Deb
         run: make package.deb
       - name: Save deb as artifact
