A hair pulling endeavor to create a deb file (#14)
* Add solid color

* All kbs use config file

* Add version machine

* Add debian control

* Define release blocker

* test this

* Test this

* Define versioned release build

* Build the deb

* Ensure newline at end of file

* Try packaging directly

* Reset after build

* Tweak the service a bit

* Update clean and put json file in right place

* Fix last commit

* Fix last again

* Make the default monitor

* Specify correct architecture

* Changes to control file should rebuild

* Add dependencies

* Try multiple depends lines

* Try comma values

* Add rules file

* Add shlibs depends

* Try doing it this way

* Get it to build

* Clean up a bit

* Make install command

* Output to correct dirs

* This will run as part of the build anyway

* Put it in bin?

* Address some linter errors

* Make things a bit more maintainable

* Stop fucking with my executable dammit

* Clean up the makefile a bit

* Better root access detection

* Fix minor issues with the deb

* Store deb as github artifact

* Install some deps

* Use sudo !

* Use correct deps

* Add a couple more deps

* I should give up spelling and just mash the keyboard

* Put license in the right place?

* Remove unused code from installer

* Also store exe as artifact

* Remove unused keyboard interface

* Reformat

* Clean up rgb a bit

* Clean up monitor keyboard

* Complete cleanup

* We need to not load colors for solid

* Add washed out tests

* Handle negative hsbs

* Cover hex

* Wait for it

* Fix badge

* Make monitor tests

* Rename file

--- a/keyboard-colors.service
+++ b/keyboard-colors.service
@@ -1,7 +1,8 @@
 [Unit]
 Description=System76 Keyboard Colors
 [Service]
-Type=Simple
-ExecStart=/usr/bin/php /opt/keyboard-colors/keyboard-color.php --frequency .5 --mode MODE # update every 2 seconds
+Type=simple
+ExecStart=/usr/bin/keyboard-color run -c /etc/keyboard-color.json
+PIDFile=/run/keyboard-colors.pid
 [Install]
 WantedBy=multi-user.target
