--- a/csharp/keyboards/keyboards.csproj
+++ b/csharp/keyboards/keyboards.csproj
@@ -2,7 +2,7 @@
 
     <PropertyGroup>
         <OutputType>Exe</OutputType>
-        <Version>1.0.1</Version>
+        <Version>1.1.0-beta.5</Version>
         <TargetFramework>netcoreapp3.0</TargetFramework>
         <LangVersion>8</LangVersion>
         <Nullable>enable</Nullable>
@@ -12,10 +12,10 @@
         <Title>Keyboard Colors</Title>
         <Company>withinboredom (Rob Landers)</Company>
         <Product>keyboard-colors</Product>
-        <AssemblyVersion>1.0.1</AssemblyVersion>
-        <FileVersion>1.0.1</FileVersion>
+        <AssemblyVersion>1.0</AssemblyVersion>
+        <FileVersion>1.0</FileVersion>
         <NeutralLanguage>en</NeutralLanguage>
-        <PackageVersion>1.0.1</PackageVersion>
+        <PackageVersion>1.0</PackageVersion>
         <PackageProjectUrl>https://github.com/withinboredom/system-76-keyboards</PackageProjectUrl>
         <PackageLicenseUrl>https://github.com/withinboredom/system-76-keyboards/blob/master/LICENSE</PackageLicenseUrl>
         <RepositoryUrl>https://github.com/withinboredom/system-76-keyboards</RepositoryUrl>
@@ -41,6 +41,18 @@
 
     <ItemGroup>
       <PackageReference Include="CommandLineParser" Version="2.6.0" />
+      <PackageReference Include="Microsoft.Extensions.Configuration" Version="3.0.1" />
+      <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="3.0.1" />
+      <PackageReference Include="Microsoft.Extensions.Configuration.EnvironmentVariables" Version="3.0.1" />
+      <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="3.0.1" />
+      <PackageReference Include="Microsoft.Extensions.Options.ConfigurationExtensions" Version="3.0.1" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <None Remove="settings.json" />
+      <Content Include="settings.json">
+        <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      </Content>
     </ItemGroup>
 
 </Project>
